# misis2024s-23-02-sergeev-d-n

./: CMakeLists.txt  codeforces.id  status.md
prj.codeforces/: 0016b.cpp  0047b.cpp  0066b.cpp  0078b.cpp  0102b.cpp  0227b.cpp  0463b.cpp  0680b.cpp  1721b.cpp  1734b.cpp  1744c.cpp  1872a.cpp  1873c.cpp  1873d.cpp  1923a.cpp  1931a.cpp  CMakeLists.txt  gym_100416a.cpp
prj.lab/: CMakeLists.txt
prj.lab/complex/: complex.cpp  complex.hpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: CMakeLists.txt  queuelstpr.cpp  queuelstpr.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_rational.cpp  test_stackarr.cpp  test_stacklst.cpp
