add_executable(gym_100416a "gym_100416a.cpp")
add_executable(1931a "1931a.cpp")
add_executable(1923a "1923a.cpp")
add_executable(0066b "0066b.cpp")
add_executable(0680b "0680b.cpp")
add_executable(0463b "0463b.cpp")
add_executable(0102b "0102b.cpp")
add_executable(0016b "0016b.cpp")
add_executable(0047b "0047b.cpp")
add_executable(0227b "0227b.cpp")
add_executable(0078b "0078b.cpp")
add_executable(1873d "1873d.cpp")
add_executable(1873c "1873c.cpp") 
add_executable(1872a "1872a.cpp") 
add_executable(1744c "1744c.cpp") 
add_executable(1734b "1734b.cpp")
add_executable(1721b "1721b.cpp")
